<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a18franciscorm.romaymendezfrancisco.Activity3"
    android:orientation="vertical"
    android:background="@color/amarillo2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/amarillo1"
        android:layout_marginBottom="@dimen/peque"
        android:orientation="vertical"
        android:gravity="left|center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masinfo"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorPrimary"
            android:onClick="onClickBusqueda"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/amarillo1"
        android:gravity="left|center_vertical"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/llamando"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorPrimary"
            android:onClick="onClickChamada"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/amarillo1"
        android:layout_marginTop="@dimen/peque"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atras"
            android:onClick="onClickSair"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finap"
            android:onClick="onClickFin"/>
    </LinearLayout>
</LinearLayout>
